<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GrayPrimary"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@color/RedSecondary">

            <TextView
                android:id="@+id/txtJudulTeknik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/Technical"
                android:textColor="@color/WhitePrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <TextView
                android:id="@+id/txtAngkaTeknik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingTop="70dp"
                android:text="5.0"
                android:textColor="@color/WhitePrimary"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <LinearLayout
                android:id="@+id/LnPlusSatuTeknik"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulTeknik">

                <TextView
                    android:id="@+id/txtPlusSatu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/plus_satu"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LNMinSatuTeknik"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LnPlusSatuTeknik">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/min_satu"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LnPlusNolDuaTeknik"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/LnPlusSatuTeknik"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulTeknik">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/plus_nol_dua"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LnMinNolDuaTeknik"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LnPlusNolDuaTeknik">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/min_nol_dua"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="309dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@color/RedSecondary">

            <TextView
                android:id="@+id/txtJudulAtlit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/Athletic"
                android:textColor="@color/WhitePrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <TextView
                android:id="@+id/txtAngkaAtlit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingTop="70dp"
                android:text="5.0"
                android:textColor="@color/WhitePrimary"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <LinearLayout
                android:id="@+id/LnPlusSatuAtlit"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="44dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulAtlit">

                <TextView
                    android:id="@+id/txtPlusSatuAtlit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/plus_satu"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LnMinSatuAtlit"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LnPlusSatuAtlit">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/min_satu"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LnPlusNolDuaAtlit"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/LnPlusSatuAtlit"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulAtlit">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/plus_nol_dua"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LnMinNolDuaAtlit"
                android:layout_width="86dp"
                android:layout_height="79dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LnPlusNolDuaAtlit">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/min_nol_dua"
                    android:textColor="@color/BlackPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnreset"
                android:layout_width="250dp"
                android:layout_height="57dp"
                android:layout_marginRight="4dp"
                android:background="@color/RedSecondary"
                android:text="RESET"
                android:textColor="@color/WhitePrimary"
                android:textSize="35sp"></Button>

            <Button
                android:id="@+id/btnsend"
                android:layout_width="250dp"
                android:layout_height="57dp"
                android:layout_marginLeft="4dp"
                android:background="@color/GreenPrimary"
                android:text="@string/Send"
                android:textColor="@color/WhitePrimary"
                android:textSize="35sp"></Button>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/nomorWasit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Judge 1"
        android:textColor="@color/BlackPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/mmedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></TextView>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>